--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,15 @@
 ニフティクラウド SDK for Ruby
 -----------------------------
 
+2014-10-28 SDK for Ruby Version.1.11.beta3
+-------------------------------------------------------------------------------
+        * 1.11.beta2リリース
+	* エコノミータイプに対応
+
+        * lib/NIFTY/Cloud/instances.rb
+        * test/test_Cloud_instances.rb
+        - エコノミータイプに対応 (#24)
+
 2013-09-16 SDK for Ruby Version.1.11.beta2
 -------------------------------------------------------------------------------
         * 1.11.beta2リリース
