--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,15 @@
 ニフティクラウド SDK for Ruby
 -----------------------------
 
+2015-01-13 SDK for Ruby Version.1.11.beta4
+-------------------------------------------------------------------------------
+        * 1.11.beta4リリース
+	* 新サーバータイプに対応
+
+        * lib/NIFTY/Cloud/instances.rb
+        * test/test_Cloud_instances.rb
+	- 新サーバータイプに対応
+
 2014-10-28 SDK for Ruby Version.1.11.beta3
 -------------------------------------------------------------------------------
         * 1.11.beta2リリース
