--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,14 @@
 ニフティクラウド SDK for Ruby
 -----------------------------
 
+2015-03-03 SDK for Ruby Version.1.11.beta5
+-------------------------------------------------------------------------------
+        * 1.11.beta5リリース
+	* ニフティID つきのロードバランサー名に対応
+
+        * lib/NIFTY/Cloud/load_balancers.rb
+	- ニフティID つきのロードバランサー名に対応
+
 2015-01-13 SDK for Ruby Version.1.11.beta4
 -------------------------------------------------------------------------------
         * 1.11.beta4リリース
