update load balancer network volume options

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,15 @@
 ニフティクラウド SDK for Ruby
 -----------------------------
 
+2015-07-14 SDK for Ruby Version.1.11.beta6
+-------------------------------------------------------------------------------
+	* 1.11.beta6リリース
+	- ロードバランサーの流量オプションを更新
+
+	* lib/NIFTY/Cloud/load_balancers.rb
+	* test/test_Cloud_load_balancers.rb
+	- ロードバランサーの流量オプションを更新
+
 2015-03-03 SDK for Ruby Version.1.11.beta5
 -------------------------------------------------------------------------------
         * 1.11.beta5リリース
