--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,14 @@
 ニフティクラウド SDK for Ruby
 -----------------------------
 
+2016-06-23 SDK for Ruby Version.1.11.beta7
+-------------------------------------------------------------------------------
+        * 1.11.beta7リリース
+	* ニフティID つきのロードバランサー名に対応 (1.11.beta5 のバグ対応)
+
+        * lib/NIFTY/Cloud/load_balancers.rb
+	- ニフティID つきのロードバランサー名に対応 (1.11.beta5 のバグ対応)
+
 2015-07-14 SDK for Ruby Version.1.11.beta6
 -------------------------------------------------------------------------------
 	* 1.11.beta6リリース
